<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="io.github.huidoudour.Installer.ui.InstallerFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_installer" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="io.github.huidoudour.Installer.ui.ShellFragment"
        android:label="@string/title_shell"
        tools:layout="@layout/fragment_shell" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="io.github.huidoudour.Installer.ui.LogsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_logs" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="io.github.huidoudour.Installer.ui.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>