<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MeActivity">

    <!-- 文本部分保持居中 -->
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text1"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/textView1"
        app:layout_constraintBottom_toTopOf="@id/textView2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_me"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/textView3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!-- 按钮单独定位到底部 -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_website"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:text="@string/find_me"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/light_pink"
        app:cornerRadius="12dp"

        app:iconGravity="textStart"
        app:iconTint="@color/black"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        style="@style/Widget.Material3.Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="80dp" />
<!--        app:icon="@android:drawable/ic_menu_search"-->
</androidx.constraintlayout.widget.ConstraintLayout>